--- a/references.bib
+++ b/references.bib
@@ -16,5 +16,5 @@
   publisher = {Springer New York, NY},
   address = {New York, NY, USA},
   series = {Springer Texts in Statistics},
-  doi = {https://doi.org/10.1007/978-1-0716-1418-1}
+  doi = {10.1007/978-1-0716-1418-1}
 }
